variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:3: error: not found: value biscuit
while (2*biscuit != caseOrange + 1) {
         ^